--- a/site/templates/twig/purchase-orders/purchase-order/edit/header.twig
+++ b/site/templates/twig/purchase-orders/purchase-order/edit/header.twig
@@ -21,7 +21,7 @@
 		<button class="btn btn-success">
 			<i class="fa fa-floppy-o" aria-hidden="true"></i> Save
 		</button>
-		<a href="{{ page.po_exitURL(po.ponbr) }}" class="btn btn-danger">
+		<a href="{{ page.poExitUrl(po.ponbr) }}" class="btn btn-danger">
 			<i class="fa fa-times" aria-hidden="true"></i> Exit
 		</a>
 	</div>
