Add lookup urls to attributes

--- a/site/templates/twig/purchase-orders/purchase-order/edit/header/contact.twig
+++ b/site/templates/twig/purchase-orders/purchase-order/edit/header/contact.twig
@@ -31,7 +31,7 @@
 								'title': 'Search Vendor Contacts',
 								'data-toggle': 'modal',
 								'data-target': '#ajax-modal',
-								'data-lookupurl': page.search_lookupURL('vendor/contacts/'),
+								'data-lookupurl': page.search_lookupURL('vendor/contacts/', {'vendorID': po.vendorid}),
 								'data-search': 'vendor-contacts'
 							}
 						}
