--- a/site/templates/twig/purchase-orders/purchase-order/edit/lookup/form.twig
+++ b/site/templates/twig/purchase-orders/purchase-order/edit/lookup/form.twig
@@ -18,7 +18,7 @@
 					'attributes_button': {
 						'data-search': 'item',
 						'data-input': '#additemID',
-						'data-lookupurl': page.search_lookupURL('items'),
+						'data-lookupurl': page.searchLookupUrl('items'),
 					}
 				}
 			%}
