--- a/site/templates/twig/purchase-orders/purchase-order/edit/links.twig
+++ b/site/templates/twig/purchase-orders/purchase-order/edit/links.twig
@@ -5,7 +5,7 @@
 	<button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#header-notes-modal">
 		<i class="fa fa-sticky-note-o" aria-hidden="true"></i> Notes
 	</button>
-	<button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#ajax-modal" title="PO #{{ ponbr }} Documents" data-search="documents" data-ponbr="{{ ponbr }}">
+	<button type="button" class="btn btn-secondary" data-toggle="modal" data-target="#ajax-modal" title="PO #{{ ponbr }} Documents" data-search="documents" data-lookupurl="{{ page.poDocumentsUrl(po.ponbr) }}" data-ponbr="{{ ponbr }}">
 		<i class="fa fa-sticky-note" aria-hidden="true"></i> Documents
 	</button>
 </div>
