REQUEST: use dropdown list for I2i Warehouse

--- a/site/templates/twig/min/i2i/xref/form/js/classes/Inputs.js.twig
+++ b/site/templates/twig/min/i2i/xref/form/js/classes/Inputs.js.twig
@@ -13,6 +13,6 @@ class I2iInputs {
 		this.form = $('#' + this.id),
 		this.parentid  = this.form.find('input[name=parentID]');
 		this.childid   = this.form.find('input[name=childID]');
-		this.whseid    = this.form.find('input[name=whseID]');
+		this.whseid    = this.form.find('select[name=whseID]');
 	}
 }
