--- a/site/templates/twig/purchase-orders/purchase-order/edit/item/form.twig
+++ b/site/templates/twig/purchase-orders/purchase-order/edit/item/form.twig
@@ -1,4 +1,4 @@
-<form action="{{ page.url }}" method="post" id="edit-item-form">
+<form action="{{ input.url() }}" method="post" id="edit-item-form">
 	<input type="hidden" name="ponbr" value="{{ po.ponbr }}">
 	<input type="hidden" name="vendorID" value="{{ po.vendorid }}">
 	<input type="hidden" name="linenbr" value="">
