FIX: create and use poCreateUrl()

--- a/site/templates/twig/purchase-orders/page.twig
+++ b/site/templates/twig/purchase-orders/page.twig
@@ -12,7 +12,7 @@
 		<h3>{{ orders.getNbResults() }} Purchase Orders</h3>
 	</div>
 	<div class="col-sm-6 text-right">
-		<a href="{{ page.po_createURL() }}" class="btn btn-secondary">
+		<a href="{{ page.poCreateUrl() }}" class="btn btn-secondary">
 			<i class="fa fa-plus" aria-hidden="true"></i> Create PO
 		</a>
 	</div>
