--- a/site/templates/twig/warehouse/inventory/lot-return/scanned-lot/lot.twig
+++ b/site/templates/twig/warehouse/inventory/lot-return/scanned-lot/lot.twig
@@ -6,7 +6,11 @@
 		</tr>
 		<tr>
 			<td>Lot Ref</td>
-			<td>{{ json['item']['lotnbr'] }}</td>
+			<td>{{ json['item']['lotref'] }}</td>
+		</tr>
+		<tr>
+			<td>Production Date</td>
+			<td>{{ json['item']['proddate']|convertdate }}</td>
 		</tr>
 		<tr>
 			<td>Item</td>
