--- a/site/templates/twig/warehouse/inventory/lot-return/scanned-lot/purchase-order.twig
+++ b/site/templates/twig/warehouse/inventory/lot-return/scanned-lot/purchase-order.twig
@@ -5,7 +5,7 @@
 			<td>{{ json['item']['purchaseorder']['ponbr'] }}</td>
 		</tr>
 		<tr>
-			<td>Customer</td>
+			<td>Vendor</td>
 			<td>{{ json['item']['purchaseorder']['vendorid'] }} - {{ json['item']['purchaseorder']['vendorname'] }}</td>
 		</tr>
 		<tr>
