--- a/site/templates/twig/warehouse/inventory/lot-return/scanned-lot/restock-modal.twig
+++ b/site/templates/twig/warehouse/inventory/lot-return/scanned-lot/restock-modal.twig
@@ -1,17 +1,25 @@
 {% extends 'util/bootstrap/html/modal.twig' %}
 
-{% set title = 'Returning ' ~ json['item']['lotnbr'] ~ ' to stock' %}
+{% set title = 'Returning ' ~ json['item']['lotnbr'] %}
 {% set id = 'restock-modal' %}
 
 
 {% block modal_body %}
 	<form action="{{ input.url() }}" id="restock-form">
 		<input type="hidden" name="action" value="return-lot">
+		<input type="hidden" name="itemID" value="{{ json['item']['itemid'] }}">
 		<input type="hidden" name="lotnbr" value="{{ json['item']['lotnbr'] }}">
+		<input type="hidden" name="lotref" value="{{ json['item']['lotref'] }}">
+		<input type="hidden" name="qty" value="{{ json['item']['qty'] }}">
 		<input type="hidden" name="ordn" value="{{ json['item']['salesorder']['ordernumber'] }}">
 		<input type="hidden" name="ponbr" value="{{ json['item']['purchaseorder']['ponbr'] }}">
 		<input type="hidden" name="whseID" value="{{ user.whseid }}">
 		<input type="hidden" name="scan" value="{{ input.get.text('scan') }}">
+
+		<div class="form-group">
+			<label for="productiondate">Production Date</label>
+			{% include 'util/date-picker.twig' with {'name': 'productiondate', 'id': 'productiondate', 'value': json['item']['proddate'] ? json['item']['proddate']|convertdate('m/d/Y') : ''} %}
+		</div>
 
 		<label for="binID">Bin ID</label>
 		{% include 'util/bootstrap/form/input-group.twig' with {
@@ -20,7 +28,7 @@
 					'attributes': {},
 					'input': {
 						'name': 'binID',
-						'value': '',
+						'value': session.get('lotreturn-binid'),
 						'attributes': {
 							'placeholder': '',
 							'aria-label':  'Bin ID',
@@ -40,7 +48,7 @@
 				}
 			}
 		%}
-		<div class="mt-3 d-flex justify-content-between align-items-center">
+		<div class="mt-4 d-flex justify-content-between align-items-center">
 			<button type="submit" class="btn btn-success" name="restock" value="true">
 				Return To Stock
 			</button>
