--- a/site/templates/twig/items/itm/dimensions/form/standard-packaging.twig
+++ b/site/templates/twig/items/itm/dimensions/form/standard-packaging.twig
@@ -34,7 +34,7 @@
 </div>
 <div class="row mb-3">
 	<div class="col-sm-6">
-		<label for="qtytare">Items Per Outer Pack</label>
+		<label for="qtytare">Items Per Ship Tare</label>
 	</div>
 	<div class="col-sm-6">
 		{% include 'util/bootstrap/form/input.twig' with {
