--- a/site/templates/twig/min/inproc/iarn/list/list.twig
+++ b/site/templates/twig/min/inproc/iarn/list/list.twig
@@ -17,7 +17,7 @@
 					</a>
 				</th>
 				<th class="py-2">Sys</th>
-				<th class="py-2">
+				<th class="py-2 text-center">
 					<a href="{# page.xrefNewUrl() #}" class="btn btn-light btn-sm">
 						<i class="fa fa-plus" aria-hidden="true"></i> Add
 					</a>
@@ -26,11 +26,27 @@
 		</thead>
 		<tbody>
 			{% for reason in reasons %}
-				<tr data-code="{{ reason.code }}">
-					<td>{{ reason.code }}</td>
+				<tr data-id="{{ reason.id }}">
+					<td>{{ reason.id }}</td>
 					<td>{{ reason.description }}</td>
 					<td>{{ reason.sys_defined|yesorno|capitalize }}</td>
-					<td></td>
+					<td class="text-center">
+						{% if iarn.recordlocker.isLocked(reason.id) == false or iarn.recordlocker.userHasLocked(reason.id) %}
+							<a href="{# page.xrefUrl(xref.parentitemid, xref.childitemid) #}" class="btn btn-warning btn-sm">
+								<i class="fa fa-pencil" aria-hidden="true"></i> Edit
+							</a>
+							{% if reason.isSysDefined() == false %}
+								&nbsp; &nbsp;
+								<a href="{# page.xrefDeleteUrl(xref.parentitemid, xref.childitemid) #}" class="btn btn-danger btn-sm delete_button" data-delete="Reason Code {{ reason.id }}">
+									<i class="fa fa-trash" aria-hidden="true"></i> Delete
+								</a>
+							{% endif %}
+						{% else %}
+							<span class="badge badge-secondary">
+								<i class="fa fa-lock" aria-hidden="true"></i> Locked By {{ iarn.recordlocker.getLockingUser(reason.id) }}
+							</span>
+						{% endif %}
+					</td>
 				</tr>
 			{% endfor %}
 		</tbody>
