--- a/site/templates/twig/min/inproc/iarn/code/form/inputs.twig
+++ b/site/templates/twig/min/inproc/iarn/code/form/inputs.twig
@@ -1,11 +1,11 @@
 <div class="form-group row">
 	<div class="col-sm-4">
-		<label for="code">Code</label>
+		<label for="id">Code</label>
 	</div>
 	<div class="col-sm-8">
 		{% include 'util/bootstrap/form/input.twig' with {
 				'input': {
-					'name': 'code',
+					'name': 'id',
 					'value': reason.id,
 					'size': 'sm',
 					'attributes': {
