--- a/site/templates/twig/min/i2i/xref/form/js/classes/Alerts.js.twig
+++ b/site/templates/twig/min/i2i/xref/form/js/classes/Alerts.js.twig
@@ -18,8 +18,10 @@ class I2iAlerts {
 		}).then(function (result) {
 			if (result.value) {
 				callback(true);
+				return true;
 			}
 			callback(false);
+			return false
 		});
 	}
 
