--- a/site/templates/twig/min/inproc/iarn/code/form/js/classes/Alerts.js.twig
+++ b/site/templates/twig/min/inproc/iarn/code/form/js/classes/Alerts.js.twig
@@ -18,8 +18,10 @@ class IarnAlerts {
 		}).then(function (result) {
 			if (result.value) {
 				callback(true);
+				return true;
 			}
 			callback(false);
+			return false;
 		});
 	}
 
