--- a/site/templates/twig/min/inproc/iarn/list/list.twig
+++ b/site/templates/twig/min/inproc/iarn/list/list.twig
@@ -18,7 +18,7 @@
 				</th>
 				<th class="py-2">Sys</th>
 				<th class="py-2 text-center">
-					<a href="{# page.xrefNewUrl() #}" class="btn btn-light btn-sm">
+					<a href="{{ page.codeNewUrl() }}" class="btn btn-light btn-sm">
 						<i class="fa fa-plus" aria-hidden="true"></i> Add
 					</a>
 				</th>
