--- a/site/templates/twig/min/inproc/iarn/code/form/js/classes/Form.js.twig
+++ b/site/templates/twig/min/inproc/iarn/code/form/js/classes/Form.js.twig
@@ -20,8 +20,7 @@ class IarnForm {
 			uri.setQuery('id', this.inputs.code.val());
 			window.location.href = uri.toString();
 		} else {
-			//location.reload();
+			location.reload();
 		}
 	}
-
 }
