--- a/site/templates/twig/min/itmp/edit/form.twig
+++ b/site/templates/twig/min/itmp/edit/form.twig
@@ -12,13 +12,38 @@
 			<label for="loginID">Login ID</label>
 		</div>
 		<div class="col-sm-8">
-			{% include 'util/form/input-with-modal-lookup.twig' with {
+			{# include 'util/form/input-with-modal-lookup.twig' with {
 					'name': 'loginID', 'value': '',
 					'modaltarget': '#ajax-modal',
 					'modaldescription': 'Search for / Choose User Login ID',
 					'attributes_button': {'data-search': 'user', 'data-lookupurl': page.search_lookupURL('users')},
 					'class_add': 'ajax-lookup',
 					'attributes': {'data-loginid': '', 'data-validate': 'loginid', 'data-ajaxfields': ''}
+				}
+			#}
+			{% include 'util/bootstrap/form/input-group.twig' with {
+					'inputgroup': {
+						'type': 'prepend',
+						'input': {
+							'name': 'loginID',
+							'attributes': {
+								'placeholder': 'Login ID',
+								'aria-label':  'Login ID',
+								'data-itemid': '',
+							}
+						},
+						'button': {
+							'colorclass': 'btn-secondary',
+							'text': 'fa fa-search'|icon,
+							'attributes': {
+								'title': 'Search Users',
+								'data-toggle': 'modal',
+								'data-target': '#ajax-modal',
+								'data-lookupurl': page.search_lookupURL('users'),
+								'data-input': '#loginID'
+							}
+						}
+					}
 				}
 			%}
 		</div>
