--- a/site/templates/twig/min/itmp/edit/js.twig
+++ b/site/templates/twig/min/itmp/edit/js.twig
@@ -39,6 +39,8 @@ $(function() {
 		var title = "Add User Permissions";
 		form.attr('data-crud', 'create');
 		input_loginID.attr('data-loginid', '');
+		input_loginID.removeAttr('readonly');
+		input_loginID.closest('.input-group').find('button').removeAttr('disabled');
 
 		fields_permissions.forEach((field, i) => {
 			var val = default_permissions[field];
@@ -51,6 +53,8 @@ $(function() {
 		var loginID = row.find('[data-loginid]').data('loginid');
 		title = "Editing Permissions for " + loginID;
 		input_loginID.val(loginID).attr('data-loginid', loginID);
+		input_loginID.attr('readonly', 'true');
+		input_loginID.closest('.input-group').find('button').attr('disabled', 'true');
 
 		fields_permissions.forEach((field, i) => {
 			var val = row.find('[data-'+field+']').data(field);
@@ -80,9 +84,6 @@ $(function() {
 						loginID: function() {
 							return $('#loginID').val();
 						},
-						new: function() {
-							return form.attr('data-crud') == 'create' ? 'true' : 'false';
-						}
 					}
 				}
 			},
@@ -94,21 +95,6 @@ $(function() {
 			form.submit();
 		}
 	});
-
-	function object_validate_remote_code(api, inputid, validating) {
-		var url = URI('{{ page.jsonapiURL() }}');
-		url.path(url.path()+api+'/validate/'+validating+'/');
-
-		return {
-			url: url.toString(),
-			type: "get",
-			data: {
-				code: function() {
-					return $('#'+inputid).val();
-				}
-			}
-		}
-	}
 
 /* =============================================================
 	Event Functions
@@ -133,7 +119,7 @@ $(function() {
 		if (validator.element('#'+input.attr('id'))) {
 			if (form.attr('data-crud') == 'create') {
 
-				var url = new URI('{{ page.jsonApiUrl('inv/itmp/exists') }}').addQuery('loginID', input.val());
+				var url = new URI('{{ page.jsonApiUrl('inv/validate/itmp/exists') }}').addQuery('loginID', input.val());
 
 				$.getJSON(url.toString(), function(exists) {
 					if (exists === true) {
@@ -166,6 +152,7 @@ $(function() {
 		var button = $(event.relatedTarget); // Button that triggered the modal
 		var modal = $(this);
 		var url = button.data('lookupurl');
+		modal.attr('data-input', button.data('input'));
 
 		modal.find('.modal-title').text(button.attr('title'));
 		modal.resizeModal('xl');
@@ -175,9 +162,10 @@ $(function() {
 	$("body").on('click', '.user-link', function(e) {
 		e.preventDefault();
 		var button = $(this);
-		var loginID = button.data('loginid');
-		input_loginID.val(loginID).change();
-		modal_ajax.modal('hide');
+		var userID = button.data('userid');
+		var modal = button.closest('.modal');
+		$(modal.attr('data-input')).val(userID).change();
+		modal.modal('hide');
 	});
 
 	$("body").on('submit', '#ajax-modal form', function(e) {
