--- a/site/templates/twig/items/itm/js.twig
+++ b/site/templates/twig/items/itm/js.twig
@@ -25,7 +25,7 @@ $(function() {
 ============================================================= */
 	origForm = form.serialize();
 
-	$("body").on("click", "a:not(#itm-form a, #ajax-modal a)", function(e) {
+	$("body").on("click", "a:not(#ajax-modal a)", function(e) {
 		if (form.serialize() !== origForm) {
 			e.preventDefault();
 			var a = $(this);
