--- a/site/templates/twig/items/itm/form/description.twig
+++ b/site/templates/twig/items/itm/form/description.twig
@@ -15,7 +15,7 @@
 		<label for="description">Description 1</label>
 	</div>
 	<div class="col-sm-8">
-		<input type="text" class="form-control form-control-sm" name="description" id="description" value="{{ configIn.useUppercaseItemDescription() ? item.description|upper : item.description }}">
+		<input type="text" class="form-control form-control-sm" name="description" id="description" value="{{ configIn.useUppercaseItemDescription() ? item.description|upper : item.description }}" maxlength="{{ itm.fieldAttribute('description1', 'maxlength') }}">
 	</div>
 </div>
 <div class="form-group row">
@@ -23,6 +23,6 @@
 		<label for="description2">Description 2</label>
 	</div>
 	<div class="col-sm-8">
-		<input type="text" class="form-control form-control-sm" name="description2" id="description2" value="{{ configIn.useUppercaseItemDescription() ? item.description2|upper : item.description2 }}">
+		<input type="text" class="form-control form-control-sm" name="description2" id="description2" value="{{ configIn.useUppercaseItemDescription() ? item.description2|upper : item.description2 }}" maxlength="{{ itm.fieldAttribute('description2', 'maxlength') }}">
 	</div>
 </div>
