--- a/site/templates/twig/items/itm/form/form-left.twig
+++ b/site/templates/twig/items/itm/form/form-left.twig
@@ -45,8 +45,8 @@
 	<div class="col-sm-3">
 		<label for="revision">Revision</label>
 	</div>
-	<div class="col-sm-8">
-		<input type="text" class="form-control form-control-sm" name="revision" id="revision" value="{{ item.revision }}">
+	<div class="col-sm-6">
+		<input type="text" class="form-control form-control-sm" name="revision" id="revision" value="{{ item.revision }}" maxlength="{{ itm.fieldAttribute('revision', 'maxlength') }}">
 	</div>
 </div>
 <div class="form-group row">
@@ -95,7 +95,7 @@
 	<div class="col-sm-3">
 		<label for="custid">For Customer</label>
 	</div>
-	<div class="col-sm-8">
+	<div class="col-sm-6">
 		{% include 'util/bootstrap/form/input-group.twig' with {
 				'inputgroup': {
 					'type': 'prepend',
@@ -105,7 +105,8 @@
 						'value': item.custid,
 						'attributes': {
 							'placeholder': '',
-							'aria-label':  'Customer ID'
+							'aria-label':  'Customer ID',
+							'maxlength': itm.fieldAttribute('custID', 'maxlength'),
 						}
 					},
 					'button': {
